[workspace]
members = [
    "app",
    "modules/host",
    "modules/types",
    "modules/handler",
    "modules/attestation-report",
    "modules/enclave-api",
    "modules/enclave-commands",
    "modules/commitments",
    "modules/context",
    "modules/crypto",
    "modules/store",
    "modules/settings",
    "modules/ibc-client",
    "modules/validation-context",
    "modules/light-client",
    "modules/tendermint-lc",
    "modules/mock-lc",
    "modules/service",
    "modules/relay/tendermint",
    "proto",
    "tests/integration",
    "tools/nodes-runner"
]
exclude = [
    "enclave",
    "enclave-modules/runtime",
    "enclave-modules/utils",
    "enclave-modules/remote-attestation",
    "proto-compiler"
]

[patch."https://github.com/datachainlab/lcp.git"]
lcp = { path = "app" }
host = { path = "modules/host" }
lcp-types = { path = "modules/types" }
handler = { path = "modules/handler" }
attestation-report = { path = "modules/attestation-report" }
enclave-api = { path = "modules/enclave-api" }
enclave-commands = { path = "modules/enclave-commands" }
commitments = { path = "modules/commitments" }
context = { path = "modules/context" }
crypto = { path = "modules/crypto" }
store = { path = "modules/store" }
settings = { path = "modules/settings" }
lcp-ibc-client = { path = "modules/ibc-client" }
validation-context = { path = "modules/validation-context" }
light-client = { path = "modules/light-client" }
tendermint-lc = { path = "modules/tendermint-lc" }
mock-lc = { path = "modules/mock-lc" }
service = { path = "modules/service" }
relay-tendermint = { path = "modules/relay/tendermint" }
lcp-proto = { path = "proto" }
integration-test = { path = "tests/integration" }
nodes-runner = { path = "tools/nodes-runner" }

enclave = { path = "enclave" }
enclave-runtime = { path = "enclave-modules/runtime" }
enclave-utils = { path = "enclave-modules/utils" }
enclave-remote-attestation = { path = "enclave-modules/remote-attestation" }
lcp-proto-compiler = { path = "proto-compiler" }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_urts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tse = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_alloc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_libc = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize_derive = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize_derive_internals = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_trts = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_types = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tcrypto = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tcrypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_crypto_helper = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_rand = { version = "1.1.5", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master"}

[patch."crates-io"]
parking_lot = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
parking_lot_core = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
lock_api = { git = "https://github.com/bluele/parking_lot", branch = "patch-const-fn-trait" }
