[package]
name = "lcp"
version = "0.0.1"
edition = "2021"
build = "build.rs"
description  = """
    LCP(Light Client Proxy) is a proxy middleware for light client verification
"""

[dependencies]
log = "0.4.8"
env_logger = "0.9.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0.56" }
clap = { version = "3.2", features = ["derive"] }
dirs = "4.0"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

host = { git = "https://github.com/datachainlab/lcp.git" }
service = { git = "https://github.com/datachainlab/lcp.git" }
enclave-api = { git = "https://github.com/datachainlab/lcp.git" }
enclave-commands = { git = "https://github.com/datachainlab/lcp.git" }

[features]
default = []
