[package]
name = "context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
ibc = { git = "https://github.com/informalsystems/ibc-rs", rev = "e8c98d440949abf971ac45a68ed9dd9e6e9f48ed", default-features = false }
ibc-proto = { git = "https://github.com/informalsystems/ibc-rs", rev = "e8c98d440949abf971ac45a68ed9dd9e6e9f48ed", default-features = false }
prost-types = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }

log-sgx = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
log = { version = "0.4.8", optional = true }
bincode-sgx = { package = "bincode", git = "https://github.com/bluele/bincode-sgx", branch = "serde", optional = true }
bincode = { version = "1.3", optional = true }

lcp-types = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
store = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
crypto = { git = "https://github.com/datachainlab/lcp.git", default-features = false }
light-client = { git = "https://github.com/datachainlab/lcp.git", default-features = false }

[features]
default = ["std"]
std = [
    "store/std",
    "crypto/std",
    "light-client/std",
    "bincode",
    "log"
]
sgx = [
    "sgx_tstd",
    "store/sgx",
    "crypto/sgx",
    "light-client/sgx",
    "bincode-sgx",
    "log-sgx"
]
